# SpaceGrantEngine

./: .flake8  .gitignore  .gitmodules  .pylint  .pylintrc  LICENSE  Makefile  README.md  package.xml  requirements.txt  ruff.toml  setup.cfg  setup.py  source.sh  test.py
sgengine/: AbstractNode.py  Engine.py  __init__.py  abstract_node.py  engine.py  package.xml  setup.py
sgengine/configuration/: __init__.py  config.py  ini_reader.py  json_reader.py
sgengine/gui/: __init__.py  gui_node.py
sgengine/hardware/: hardware_node.py  pin.py  pin_handler.py
sgengine/hardware/oakds2/: __init__.py  oakds2.py  oakds2_node.py  oakds2_test.py
sgengine/map/: map_node.py
sgengine/object_detection/: object_detection_node.py
sgengine/odometry/: oakds2_node.py  odometry_node.py
sgengine/pathfinding/: astar_pathfinding.py  pathfinding_node.py
sgengine/planning/: planning_node.py
sgengine/sgengine/: abstract_node.py  test_node.py
sgengine/sgengine/configuration/: __init__.py  config.py  ini_reader.py
sgengine/sgengine/hardware/: __init__.py  hardware_node.py
sgengine/sgengine/hardware/controller/: __init__.py  steamcontroller_node.py  xboxcontroller_node.py
sgengine/sgengine/hardware/oak/: node.py  reader.py
sgengine/sgengine/hardware/oakds2/: oakds2_node.py
sgengine/sgengine/hardware/pico/: __init__.py  pico_comms.py  (+1 more)
sgengine/sgengine/kinematics/: kinematics_node.py
sgengine/sgengine/object_detection/: __init__.py  column_movment.py  segmentation.py
sgengine/sgengine/odometry/: odometry_node.py
sgengine/sgengine/pathfinding/: pathfinding_node.py
(+53 files in other folders)
