<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>sgengine</name>
  <version>1.0.0</version>
  <description>SpaceGrantEngine - ROS2 Utilities Package</description>
  <maintainer email="jcdavis@mines.edu">jcdavis</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  <test_depend>ament_mypy</test_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>depthai</depend>
  <depend>numpy</depend>
  <depend>opencv-python</depend>
  <depend>uvloop</depend>
  <depend>flask</depend>
  <depend>scikit-learn</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
